--- a/secondApp/package.json
+++ b/secondApp/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node simpleGetReq.js"
+    "start": "node headerGetReq.js"
   },
   "keywords": [],
   "author": "",
